one
Что делать с булеановскими полями? Нужно создать кнопки "назад". Добавить анимацию. Сделать в ресурсах языки. ФИКС